# Midas

./: .gitignore  LICENSE  README.md  example_action_script.txt  pyproject.toml  run.sh
.github/: FUNDING.yml
app/: __init__.py  application.py  main.py
app/actions/: __init__.py  base.py  command.py  engine.py  script.py  shortcut.py  sound.py  volume.py
app/midi/: __init__.py  controller.py  events.py  manager.py  profiles.py
app/nodes/: __init__.py  base.py  builtin.py  graph.py
app/storage/: __init__.py  presets.py  workspace_store.py
app/system/: __init__.py  audio.py
app/ui/: __init__.py  connection_graphics.py  device_panel.py  group_graphics.py  main_window.py  node_editor.py  node_graphics.py  node_inspector.py
midas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
midi_macro_board.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
