[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midas"
version = "0.1.0"
description = "Node-based desktop automation tool driven by MIDI controllers."
authors = [{ name = "Midas" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "mido>=1.3",
    "python-rtmidi>=1.5",
]

[project.optional-dependencies]
dev = ["black", "ruff"]

[project.scripts]
midas = "app.main:main"

